--- a/petstore/package.json
+++ b/petstore/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -25,9 +27,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "postcss": "^8.2.6",
     "prettier": "^1.19.1",
-    "tailwindcss": "^2.0.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
